@@ -1,3 +1,8 @@
+.412
+  - Minor decruft and "still works" release
+  - Don't warn about memcached if memcachedHosts is undef in the rc
+  - Redefines.pm removed; has not been needed for a long time
+
 .411
   - "__init" Class callback was mis-documented as "init"
   - "__baseAsserts" should no longer be used; all asserted keys in a
